0.8.5
-----
  * Always use /proc/mounts instead of /etc/mtab.
  * Do not use formatting on dumb terminals (e.g. the 3270 console).
  * Add a new command that modifies multipath.conf to blacklist all
    devices except those specified on the command line: multipath

0.8.4
-----
  * Do not reboot after taking a dump with fadump.
  * Add a new command to dump the configuration variables: dump_config
  * Configuration options can be passed via the kernel command line.
  * Add a helper script (kdump-bootloader.pl) for updating the boot
    loader configuration.
  * Support for kdump on S/390x.

0.8.3
-----
  * Update the text of the license (new FSF address).
  * Basic support for fadump (Firmware-assisted dump) on the IBM POWER
    architecture.

0.8.2
-----
  * Fix missing error reason (string representation  of errno) in the
    exception output.
  * Include the position of the input stream in the exception output.
  * Improve error message in Debuglink::openCompressed().
  * Fix invalid call of mkstemp() in Debuglink::openCompressed()
  * Do not use showmount (it is apparently no longer needed).
  * Improve the algorithm of finding kernel modules and programs
    needed to mount the dump directory.
  * Pass the correct "sysrq=" argument to the kdump kernel.
  * Add support for RSA keys when saving over SSH.
  * Do not re-generate kdump initrd on boot. Instead, hook into the
    normal mkinitrd run.
  * Adjust init-script actions to match LSB better.
  * Check remote host SSH key if available.
  * Allow dumping if the primary kernel was booted in EFI mode.
  * Correctly recognize ELF and compressed ELF kernel files.
  * Create KDUMP_SAVEDIR if non-existent.
  * Include makedumpfile-R.pl in the kdump initrd.
  * Pass bash options between mkdumprd and mkinitrd to simplify debugging.
  * Ignore unknown NMIs in the kdump kernel.
  * Do not try to recurse non-directories when deleting old dumps.
  * Support for LZO-compressed dumps.